[ORG-34] added composite name generation
